# stupid-api

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
nginx/: nginx.conf
src/stupid_api/: server.py
src/stupid_api/blueprints/v1/: group.py
src/stupid_api/blueprints/v1/customers/: view.py
src/stupid_api/blueprints/v1/orders/: view.py
src/stupid_api/blueprints/v1/products/: model.py  view.py
src/stupid_api/blueprints/v1/shipping/: view.py
src/stupid_api/blueprints/v2/: group.py
src/stupid_api/blueprints/v2/customers/: view.py
src/stupid_api/blueprints/v2/orders/: view.py
src/stupid_api/common/: log.py
src/stupid_api/common/data/: customers.py  customers_v2.py  orders.py  orders_v2.py  products.py  shipping.py
src/stupid_api/common/utils/: app_factory.py
