[tool.poetry]
name = "stupid-api"
version = "0.1.0"
description = ""
authors = ["alancota <alancota@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sanic = "23.12.0"
setuptools = "^69.1.1"
httpx = "^0.27.0"
sanic-ext = "^23.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
